@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  February, 15 2017, 19:30
+  deviceServiceVersion = 1013377
+	
+  [-] Fixed error with header saving
+  
+********************************************************************************
+
   February, 14 2017, 23:30
   deviceServiceVersion = 1013376
 	
